src/main/webapp/css/app.css
/* ... */
.activity-item-content .left .profile-thumbnail{
    position: static;
}

.activity-item-content .right .activity-item-owner{
    color: #005172;
    font-weight: bold;
}

.activity-stream-footer{
    border: 1px solid #014F36;
    padding: 1em;
    text-align: center;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    /*IE 7 AND 8 DO NOT SUPPORT BORDER RADIUS*/
}

.activity-stream-footer a{
    text-decoration: none;
    color: white;
    margin: 0;
    font-size: 14px;
    font-weight: normal;
}

.dropdown .profile-thumbnail{
    top: -7px;
}

#searchSite{
    position: absolute;
    top: 13px;
    right: 50px;
    z-index: 0;
    height: 35px;
    padding: 5px 4px 0 15px;
    border: 1px solid black;
    border-left: none;
    border-top-right-radius: 20px;
    border-bottom-right-radius: 20px
}

#searchSite.slideout {
    -webkit-animation-duration: 1s;
    -webkit-animation-name: slideout;
    -webkit-animation-fill-mode: forwards;

    -moz-animation-duration: 1s;
    -moz-animation-name: slideout;
    -moz-animation-fill-mode: forwards;

    -o-animation-duration: 1s;
    -o-animation-name: slideout;
    -o-animation-fill-mode: forwards;

    -o-animation-duration: 1s;
    -o-animation-name: slideout;
    -o-animation-fill-mode: forwards;

    animation-duration: 1s;
    animation-name: slideout;
    animation-fill-mode: forwards;
}

@-webkit-keyframes slideout {
  from {
    right: 50px;
  }

  to {
    right: -125px;
  }
}

@-moz-keyframes slideout {
  from {
    right: 50px;
  }

  to {
    right: -125px;
  }
}

@keyframes slideout {
  from {
    right: 50px;
  }

  to {
    right: -125px;
  }
}

#searchSite form.form-search {
    float: left;
}

#searchSite a {
    margin: 3px 14px 10px;
    display: inline-block;
}

#searchSite input.search-query {
    border-radius: 0;
}

input.input-medium.search-query{
    width: 83%;
}

.search-results-list{
    list-style-type: none;
    margin: 1em 0 1em 0;
}

.search-results-list li{
    padding: 1em 0 0 0;
}

li.search-result.members{
    border-bottom: none;
}

.search-results h1{
    font-weight: bold;
}

.search-results h1,
.search-results p{
    margin-top: 1em;
    display: inline-block;
}

.profile-right h6{
    display: inline-block;
    text-transform: none;
}

.profile-activity{
    border-left: 1px solid #014F36;
}

.profile-activity h3{
    margin: 0 0 1em 0;
    font-family: "TradeGothicW01-BoldCn20 675334", "Arial Narrow", sans-serif;
    color: #999;
}

.profile-list-item .profile-left{
    float: left;
    width: 48%;
    padding-left: 11em;
}

.profile-list-item .profile-right{
    float: left;
    width: 25%;
    border-left: solid 1px #C5C5C5;
    padding: 1em;
    min-height: 100px;
}

.admin .profile-list-item .profile-right {
    min-height: 91px;
}

.profile-left h3,
.name-title h3{
    font-weight: bold;
    margin-bottom: 0;
    line-height: 28px;
    cursor: pointer;
    display: inline-block;
}

.name-title h3{
    cursor: auto;
}

.profile-left h5,
.name-title h5{
    margin: 0;
}

.profile-right h3{
    margin: 0 0 5px 0;
    font: 17px bold "TradeGothicW01-BoldCn20 675334", "Arial Narrow", sans-serif;
    font-weight: bold;
    color: #999999;
}
.profile-right a{
    color: #eeaf00;
    text-decoration: none;
}

.search-result{
    position: relative;
}

.search-result .content{
    float: right;
    margin-left: 0;
    width: 64%;
}

.form-search .control-group{
    margin-bottom: 0;
}

.form-search .control-group .control-label{
    color: #ffffff;
}

.search-result ul>li{
    padding: 0 15px 0 0;
    border-bottom: 0;
}

.search-result .content-thumbnail{
    float: left;
}

.doc-type-thumbnail{
    height: 26px;
    width: 26px;
    display: inline-block;
    margin: 0 1em 0 0;
}

.pdf{
    background: url('../images/GCEE_sprite.png') -72px -68px no-repeat;
}
.word{
    background: url('../images/GCEE_sprite.png') -72px -99px no-repeat;
}
.ppt{
    background: url('../images/GCEE_sprite.png') -72px -131px no-repeat;
}
.xls{
    background: url('../images/GCEE_sprite.png') -72px -162px no-repeat;
}
.txt{
    background: url('../images/GCEE_sprite.png') -72px -194px no-repeat;
}
.rtf{
    background: url('../images/GCEE_sprite.png') -72px -225px no-repeat;
}

.document h6{
    position: relative;
    top: -10px;
    display: inline;
}

.attached-doc{
    position: absolute;
    top: 1px;
    right: 3em;
}

.paper-clip{
    position: absolute;
    width: 17px;
    height: 43px;
    top: -14px;
    right: 4.25em;
    background: url('../images/GCEE_sprite.png') -116px -81px no-repeat;
    z-index: 2;
}

.content-thumbnail.small{
    width: 72px;
    height: 96px;
}

.content-thumbnail.small img{
    width: 62px;
    height: 81px;
    margin: 5px 0 0 5px;
}

.discussion-item a.author {
    color: #005172;
    text-decoration: none;
}

.discussion-item .article-stats li:last-child{
    cursor: pointer;
}

.search-box.site{
    margin: 2em 0 0 0;
}

.search-box.members{
    margin-top: 0;
}

.search-results .search-box.members{
    margin-top: 3em;
}

.search-box .header{
    padding: 0
}

.search-box .header h4{
    color: #ffffff;
    margin: 0;
    text-align: center;
    padding: 0.5em 0;
}
/* ... */

